--- a/servicos.html
+++ b/servicos.html
@@ -66,18 +66,18 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img class="d-block w-100 carroimg" src="./imagens/Banner-Cliente-Fidelidadec.png"
-                        alt="Primeiro Slide">
+                        alt="Primeiro Slide" class="img-fluid">
                 </div>
                 <div class="carousel-item">
                     <img class="d-block w-100 carroimg" src="./imagens/BANNER-VERDE-COM-BOTAO-PONTILHADO-1.png"
-                        alt="Segundo Slide">
+                        alt="Segundo Slide" class="img-fluid">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100 carroimg" src="./imagens/convenios tmo banner.jpg" alt="Terceiro Slide">
+                    <img class="d-block w-100 carroimg" src="./imagens/convenios tmo banner.jpg" alt="Terceiro Slide" class="img-fluid">
                 </div>
                 <div class="carousel-item">
                     <img class="d-block w-100 carroimg" src="./imagens/GP-BANNER-GREAT-PLACE-950x352-20170816.jpg"
-                        alt="Terceiro Slide">
+                        alt="Terceiro Slide" class="img-fluid">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
