--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
           <div class="col-md-3" style="float:left">
             <div class="card mb-2">
-              <img class="card-img-top" src="./imagens/destaque1.jpg" height="180" alt="Card image cap">
+              <img class="card-img-top img-fluid" src="./imagens/destaque1.jpg" height="180" alt="Card image cap">
               <div class="card-body">
                 <h6 class="card-title">Protetor Solar Corporal Neutrogena Sun Fresh FPS 50 com 200ml</h6>
                 <p class="card-text">Nivea 230g</p>
@@ -146,7 +146,7 @@
 
           <div class="col-md-3" style="float:left">
             <div class="card mb-2">
-              <img class="card-img-top" src="./imagens/destaque2.jpg" width="60" height="180" alt="Card image cap">
+              <img class="card-img-top img-fluid" src="./imagens/destaque2.jpg" width="60" height="180" alt="Card image cap">
               <div class="card-body">
                 <h6 class="card-title">Buscofem 400mg com 10 cápsulas
                   card's content.</h6>
@@ -159,7 +159,7 @@
 
           <div class="col-md-3" style="float:left">
             <div class="card mb-2">
-              <img class="card-img-top" src="./imagens/destaque3.jpg" width="60" height="180" alt="Card image cap">
+              <img class="card-img-top img-fluid" src="./imagens/destaque3.jpg" width="60" height="180" alt="Card image cap">
               <div class="card-body">
                 <h6 class="card-title">Buscofem 400mg com 2 cápsulas</h6>
                 <p class="card-text">Buscofem 60g</p>
@@ -171,7 +171,7 @@
 
           <div class="col-md-3" style="float:left">
             <div class="card mb-2">
-              <img class="card-img-top" src="./imagens/destaque5.jpg" width="60" height="180" alt="Card image cap">
+              <img class="card-img-top img-fluid" src="./imagens/destaque5.jpg" width="60" height="180" alt="Card image cap">
               <div class="card-body">
                 <h6 class="card-title mb-4">Atrofem com 2 cápsulas</h6>
                 <p class="card-text">Atrofem 20g</p>
@@ -189,7 +189,7 @@
 
           <div class="col-md-3" style="float:left">
             <div class="card mb-2">
-              <img class="card-img-top" src="./imagens/destaque4.jpg" width="60" height="180" alt="Card image cap">
+              <img class="card-img-top img-fluid" src="./imagens/destaque4.jpg" width="60" height="180" alt="Card image cap">
               <div class="card-body">
                 <h6 class="card-title">Atrofem com 10 cápsulas</h6>
                 <p class="card-text">10 Cápsulas Gelatinosas com 20g</p>
@@ -201,7 +201,7 @@
 
           <div class="col-md-3" style="float:left">
             <div class="card mb-2">
-              <img class="card-img-top" src="./imagens/destaque6.jpg" width="60" height="180" alt="Card image cap">
+              <img class="card-img-top img-fluid" src="./imagens/destaque6.jpg" width="60" height="180" alt="Card image cap">
               <div class="card-body">
                 <h6 class="card-title">Shampoo Johnson's Gotas de Brilho</h6>
                 <p class="card-text">400ml</p>
@@ -213,7 +213,7 @@
 
           <div class="col-md-3" style="float:left">
             <div class="card mb-2">
-              <img class="card-img-top" src="./imagens/destaque7.jpg" width="60" height="180" alt="Card image cap">
+              <img class="card-img-top img-fluid" src="./imagens/destaque7.jpg" width="60" height="180" alt="Card image cap">
               <div class="card-body">
                 <h6 class="card-title">Gel Nivea Hidratante Facial com 100ml</h6>
                 <p class="card-text">Nivea 100ml</p>
@@ -225,7 +225,7 @@
 
           <div class="col-md-3" style="float:left">
             <div class="card mb-2">
-              <img class="card-img-top" src="./imagens/destaque8.jpg" width="60" height="180" alt="Card image cap">
+              <img class="card-img-top img-fluid" src="./imagens/destaque8.jpg" width="60" height="180" alt="Card image cap">
               <div class="card-body">
                 <h6 class="card-title">Suplemento Vitamínico Cogmax com 60 cápsulas</h6>
                 <p class="card-text">Cogmax 60 Cápsulas</p>
@@ -281,7 +281,7 @@
 
           <div class="col-md-3" style="float:left">
             <div class="card mb-2">
-              <img class="card-img-top" src="./imagens/maisV1.jpg" height="180" alt="Card image cap">
+              <img class="card-img-top img-fluid" src="./imagens/maisV1.jpg" height="180" alt="Card image cap">
               <div class="card-body">
                 <h6 class="card-title">Loção Hidratante Corporal Eucerin pH5 com 400ml</h6>
                 <p class="card-text">400ml</p>
@@ -293,7 +293,7 @@
 
           <div class="col-md-3" style="float:left">
             <div class="card mb-2">
-              <img class="card-img-top" src="./imagens/maisV2.jpg" height="180" alt="Card image cap">
+              <img class="card-img-top img-fluid" src="./imagens/maisV2.jpg" height="180" alt="Card image cap">
               <div class="card-body">
                 <h6 class="card-title">Neosil 50mg Suplemento Alimentar com 90 comprimidos</h6>
                 <p class="card-text">R$297,99</p>
@@ -304,7 +304,7 @@
 
           <div class="col-md-3" style="float:left">
             <div class="card mb-2">
-              <img class="card-img-top" src="./imagens/maisV3.jpg" height="180" alt="Card image cap">
+              <img class="card-img-top img-fluid" src="./imagens/maisV3.jpg" height="180" alt="Card image cap">
               <div class="card-body">
                 <h6 class="card-title">Enxaguante Bucal Malvatrikids Júnior</h6>
                 <p class="card-text">250ml</p>
@@ -316,7 +316,7 @@
 
           <div class="col-md-3" style="float:left">
             <div class="card mb-2">
-              <img class="card-img-top" src="./imagens/maisV4.jpg" height="180" alt="Card image cap">
+              <img class="card-img-top img-fluid" src="./imagens/maisV4.jpg" height="180" alt="Card image cap">
               <div class="card-body">
                 <h6 class="card-title">Suplemento Alimentar Dr. Good Cálcio + D3 com 30 Unidades</h6>
                 <p class="card-text">R$43,85</p>
@@ -333,7 +333,7 @@
 
           <div class="col-md-3" style="float:left">
             <div class="card mb-2">
-              <img class="card-img-top" src="./imagens/maisV5.jpg" height="180" alt="Card image cap">
+              <img class="card-img-top img-fluid" src="./imagens/maisV5.jpg" height="180" alt="Card image cap">
               <div class="card-body">
                 <h6 class="card-title">Gel Pós Picadas de Insetos Free Bite com 20ml</h6>
                 <p class="card-text">Calminex Ice</p>
@@ -345,7 +345,7 @@
 
           <div class="col-md-3" style="float:left">
             <div class="card mb-2">
-              <img class="card-img-top" src="./imagens/maisV6.jpg" height="180" alt="Card image cap">
+              <img class="card-img-top img-fluid" src="./imagens/maisV6.jpg" height="180" alt="Card image cap">
               <div class="card-body">
                 <h6 class="card-title">Fita Remoção Sem Dor Nexcare 25mm x 1,35m</h6>
                 <p class="card-text">Nexcare</p>
@@ -357,7 +357,7 @@
 
           <div class="col-md-3" style="float:left">
             <div class="card mb-2">
-              <img class="card-img-top" src="./imagens/maisV7.jpg" height="180" alt="Card image cap">
+              <img class="card-img-top img-fluid" src="./imagens/maisV7.jpg" height="180" alt="Card image cap">
               <div class="card-body">
                 <h6 class="card-title">Óleo de Limpeza para Banho Eucerin pH5 Pele Sensível e Seca com 200ml</h6>
                 <p class="card-text">200ml</p>
@@ -369,7 +369,7 @@
 
           <div class="col-md-3" style="float:left">
             <div class="card mb-2">
-              <img class="card-img-top" src="./imagens/maisV8.jpg" height="180" alt="Card image cap">
+              <img class="card-img-top img-fluid" src="./imagens/maisV8.jpg" height="180" alt="Card image cap">
               <div class="card-body">
                 <h6 class="card-title">Protetor Solar Umbrella Perfect Skin Claro FPS50 com 50g</h6>
                 <p class="card-text">50g</p>
@@ -425,7 +425,7 @@
 
           <div class="col-md-3" style="float:left">
             <div class="card mb-2">
-              <img class="card-img-top" src="./imagens/ofertaE1.jpg" height="180" alt="Card image cap">
+              <img class="card-img-top img-fluid" src="./imagens/ofertaE1.jpg" height="180" alt="Card image cap">
               <div class="card-body">
                 <h6 class="card-title">Pasta de Dente Colgate Total 12 Clean Mint com 90g</h6>
                 <p class="card-text">90g</p>
@@ -437,7 +437,7 @@
 
           <div class="col-md-3" style="float:left">
             <div class="card mb-2">
-              <img class="card-img-top" src="./imagens/ofertaE2.jpg" height="180" alt="Card image cap">
+              <img class="card-img-top img-fluid" src="./imagens/ofertaE2.jpg" height="180" alt="Card image cap">
               <div class="card-body">
                 <h6 class="card-title">Enxaguante Bucal Colgate Plax Fresh Mint</h6>
                 <p class="card-text">1000ml - Leve 1000ml Pague 700ml</p>
@@ -449,7 +449,7 @@
 
           <div class="col-md-3" style="float:left">
             <div class="card mb-2">
-              <img class="card-img-top" src="./imagens/ofertaE3.jpg" height="180" alt="Card image cap">
+              <img class="card-img-top img-fluid" src="./imagens/ofertaE3.jpg" height="180" alt="Card image cap">
               <div class="card-body">
                 <h6 class="card-title">Enxaguante Antisséptico Bucal Colgate Total 12 Clean Mint Zero Álcool com 500ml
                 </h6>
@@ -461,7 +461,7 @@
 
           <div class="col-md-3" style="float:left">
             <div class="card mb-2">
-              <img class="card-img-top" src="./imagens/ofertaE4.jpg" height="180" alt="Card image cap">
+              <img class="card-img-top img-fluid" src="./imagens/ofertaE4.jpg" height="180" alt="Card image cap">
               <div class="card-body">
                 <h6 class="card-title">Escova de Dente Colgate PerioGard Extra Macia com 1 unidade</h6>
                 <p class="card-text">1 Unidade</p>
@@ -479,7 +479,7 @@
 
           <div class="col-md-3" style="float:left">
             <div class="card mb-2">
-              <img class="card-img-top" src="./imagens/ofertaE5.jpg" height="180" alt="Card image cap">
+              <img class="card-img-top img-fluid" src="./imagens/ofertaE5.jpg" height="180" alt="Card image cap">
               <div class="card-body">
                 <h6 class="card-title">Escova de Dente Colgate Gengiva Therapy com 1 Unidade</h6>
                 <p class="card-text">Novartis</p>
@@ -491,7 +491,7 @@
 
           <div class="col-md-3" style="float:left">
             <div class="card mb-2">
-              <img class="card-img-top" src="./imagens/ofertaE6.jpg" height="180" alt="Card image cap">
+              <img class="card-img-top img-fluid" src="./imagens/ofertaE6.jpg" height="180" alt="Card image cap">
               <div class="card-body">
                 <h6 class="card-title">Enxaguante Bucal Colgate Total 12 Gengiva Reforçada com 500ml</h6>
                 <p class="card-text">Novartis</p>
@@ -503,7 +503,7 @@
 
           <div class="col-md-3" style="float:left">
             <div class="card mb-2">
-              <img class="card-img-top" src="./imagens/ofertaE7.jpg" height="180" alt="Card image cap">
+              <img class="card-img-top img-fluid" src="./imagens/ofertaE7.jpg" height="180" alt="Card image cap">
               <div class="card-body">
                 <h6 class="card-title">Escova de Dente Colgate Gengiva Therapy com 3 Unidades</h6>
                 <p class="card-text">Novartis</p>
@@ -515,7 +515,7 @@
 
           <div class="col-md-3" style="float:left">
             <div class="card mb-2">
-              <img class="card-img-top" src="./imagens/ofertaE8.jpg" height="180" alt="Card image cap">
+              <img class="card-img-top img-fluid" src="./imagens/ofertaE8.jpg" height="180" alt="Card image cap">
               <div class="card-body">
                 <h6 class="card-title">Pasta de Dente Colgate Total 12 Gengiva Reforçada com 140g</h6>
                 <p class="card-text">Novartis</p>
