--- a/formulario.html
+++ b/formulario.html
@@ -84,7 +84,7 @@
 
                     <div class="col-md-3 mb-3">
                         <label for="validationCustom02">Telefone</label>
-                        <input type="text" class="form-control" id="telefone" placeholder="Idade"
+                        <input type="text" class="form-control" id="telefone" placeholder="Telefone"
                             onblur="valida_telefone(this)" onkeydown="fMasc( this, mTELE )" maxlength="15" required>
                     </div>
 
