--- a/print.html
+++ b/print.html
@@ -15,7 +15,7 @@
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <a class="navbar-brand" href="index.html"><img src="./imagens/logo_farma.png" width="110" height="60"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado"
                 aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
@@ -41,12 +41,12 @@
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i
                             class="bi bi-search"></i></button>
                 </form>
-                <button class="btn btn-dark mr-1" onclick="aumentarFonte()"><img
+                <button class="btn mr-1" onclick="aumentarFonte()"><img
                         src="./imagens/icon_font_more.png"></button>
-                <button class="btn btn-dark mr-1" onclick="diminuirFonte()"><img
+                <button class="btn mr-1" onclick="diminuirFonte()"><img
                         src="./imagens/icon_font_less.png"></button>
-                <button class="btn btn-dark mr-1" onclick="modoClaro()"><img src="./imagens/icon_sun.png"></button>
-                <button class="btn btn-dark mr-1" onclick="modoEscuro()"><img src="./imagens/icon_moon.png"></button>
+                <button class="btn mr-1" onclick="modoClaro()"><img src="./imagens/icon_sun.png"></button>
+                <button class="btn mr-1" onclick="modoEscuro()"><img src="./imagens/icon_moon.png"></button>
             </div>
             </div>
         </nav>
