--- a/servicos.html
+++ b/servicos.html
@@ -15,7 +15,7 @@
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <a class="navbar-brand" href="index.html"><img src="./imagens/logo_farma.png" width="110" height="60"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado"
                 aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
@@ -41,56 +41,52 @@
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i
                             class="bi bi-search"></i></button>
                 </form>
-                <button class="btn btn-dark mr-1" onclick="aumentarFonte()"><img
+                <button class="btn mr-1" onclick="aumentarFonte()"><img
                         src="./imagens/icon_font_more.png"></button>
-                <button class="btn btn-dark mr-1" onclick="diminuirFonte()"><img
+                <button class="btn mr-1" onclick="diminuirFonte()"><img
                         src="./imagens/icon_font_less.png"></button>
-                <button class="btn btn-dark mr-1" onclick="modoClaro()"><img src="./imagens/icon_sun.png"></button>
-                <button class="btn btn-dark mr-1" onclick="modoEscuro()"><img src="./imagens/icon_moon.png"></button>
+                <button class="btn mr-1" onclick="modoClaro()"><img src="./imagens/icon_sun.png"></button>
+                <button class="btn mr-1" onclick="modoEscuro()"><img src="./imagens/icon_moon.png"></button>
             </div>
             </div>
         </nav>
     </header>
 
 
+    <div id="carouselExampleIndicators" class="carousel slide mb-5" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100 img-fluid padrao" src="./imagens/Banner-Cliente-Fidelidadec.png"
+                    alt="Primeiro Slide">
+            </div>
+            <div class="carousel-item">
+                <img id="padrao2" class="d-block w-100 img-fluid padrao" src="./imagens/BANNER-VERDE-COM-BOTAO-PONTILHADO-1.png"
+                    alt="Segundo Slide">
+            </div>
+            <div class="carousel-item">
+                <img id="padrao3" class="d-block w-100 img-fluid padrao" src="./imagens/convenios tmo banner.jpg" alt="Terceiro Slide">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Anterior</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Próximo</span>
+        </a>
+    </div>
+
+
     <section class="container">
 
-        <div id="carouselExampleIndicators" class="carousel slide mb-5" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-            </ol>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="d-block w-100 img-fluid" src="./imagens/Banner-Cliente-Fidelidadec.png"
-                        alt="Primeiro Slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100 img-fluid" src="./imagens/BANNER-VERDE-COM-BOTAO-PONTILHADO-1.png"
-                        alt="Segundo Slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100 img-fluid" src="./imagens/convenios tmo banner.jpg" alt="Terceiro Slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100 img-fluid" src="./imagens/GP-BANNER-GREAT-PLACE-950x352-20170816.jpg"
-                        alt="Terceiro Slide">
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Anterior</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Próximo</span>
-            </a>
-        </div>
-
-
+        
         <h2>Convênio Farmácia para Pequenas e Médias Empresas</h2>
 
         <p>A Drogarias Pacheco e Drogaria São Paulo com o objetivo de aprimorar o atendimento e estender a prestação de
@@ -286,23 +282,23 @@
     
         <div class="conteudo">
           <div class="farma">
-            <h6>FARM+</h6>
+            <h6 class="titulo_rodape">FARM+</h6>
             <p id="texto">A jornada é sua e somente sua. Outros podem caminhar com vc mas ninguém pode caminhar por você.</p>
           </div>
           <div class="servicos">
-            <h6>SERVIÇOS</h6>
+            <h6 class="titulo_rodape">SERVIÇOS</h6>
             <p><a href="#">Convênio Farmácia</a></p>
             <p><a href="#">Bulário Anvisa</a></p>
             <p><a href="#">Testes Covid-19</a></p>
             <p><a href="#">Aferir Pressão</a></p>
           </div>
           <div class="institucional">
-            <h6>INSTITUCIONAL</h6>
+            <h6 class="titulo_rodape">INSTITUCIONAL</h6>
             <p><a href="">Trabalhe conosco</a></p>
             <p><a href="">Aplicativos</a></p>
           </div>
           <div class="privacidade">
-            <h6>PRIVACIDADE</h6>
+            <h6 class="titulo_rodape">PRIVACIDADE</h6>
             <p><a href="#">Política de Cookies</a></p>
             <p><a href="#">(LGPD)</a></p>
             <p><a href="#">FAQ</a></p>
