--- a/formulario.html
+++ b/formulario.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./css/formulario.css">
     <script src="./js/formulario.js"></script>
-    <title>Document</title>
+    <title>Cadastro</title>
 </head>
 
 <body>
