--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
   <link rel="stylesheet" href="./css/style.css">
   <script src="./js/script.js"></script>
-  <title>Document</title>
+  <title>Home</title>
 </head>
 
 <body>
