--- a/print.html
+++ b/print.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/print.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <script src="./js/print.js"></script>
-    <title>Document</title>
+    <title>Cadastro</title>
 </head>
 
 <body>
