--- a/quem_somos.html
+++ b/quem_somos.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./css/quem_somos.css">
     <script src="./js/quem_somos.js"></script>
-    <title>Document</title>
+    <title>Quem Somos</title>
 </head>
 
 <body>
