--- a/servicos.html
+++ b/servicos.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./css/servicos.css">
     <script src="./js/servicos.js"></script>
-    <title>Document</title>
+    <title>Serviços</title>
 </head>
 
 <body>
